# ic-auth-tokens

./: Cargo.toml  README.md  dfx.json  flake.nix
crates/ic-auth-tokens/: Cargo.toml
crates/ic-auth-tokens/src/: lib.rs
examples/ic-auth-tokens-example/: Cargo.toml  ic-auth-tokens-example.did  lib.rs  test.ic-repl
